--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     font-family: 'Roboto', 'Helvetica', sans-serif;
     text-align: center;
+    background: white; /* Háttérszín hozzáadva */
+    margin: 0;
+    padding: 0;
 }
 
 #game-container {
@@ -36,9 +39,7 @@ body {
     margin-top: 20px;
     justify-content: center;
     width: 300px;
-    /* margin: auto auto; */
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto; /* Középre igazítás */
     justify-items: center;
 }
 
@@ -59,11 +60,12 @@ body {
 #gameContainer {
     border-radius: 10px;
     box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.15), 0px 2px 4px 0px rgba(0, 0, 0, 0.12);
-    margin: 2em auto;
     max-width: 22rem;
     overflow: hidden;
     color: #223968;
     background: #C1DFEF;
+    margin: 2em auto;
+    padding: 20px; /* Belső margó hozzáadva a tartalomhoz */
 }
 
 #check {
@@ -109,4 +111,5 @@ body {
 
 h1 {
     font-size: 1.7em;
+    color: #223968; /* Cím szín hozzáadva */
 }
